# py_project_template

./: LICENSE  README.md  Taskfile.yaml  pyproject.toml
assets/: Taskfile.yaml  pyproject.toml  setup.cfg
scripts/: py_project_template.py
