[tool.poetry]
name = "__PROJECT_NAME__"
version = "0.1.0"
description = ""
authors = ["__AUTHOR_NAME__ <__AUTHOR_EMAIL__>"]

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.2.0"
click = "^8.1.3"


[tool.black]
line-length = 120

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
known_first_party = ["__PROJECT_NAME__"]
line_length = 120
multi_line_output = 3
use_parentheses = true
